composer.json: had to change plugin name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "kylephillips/favorites",
+	"name": "podkot/favorites",
 	"description": "Favorites for WordPress",
 	"keywords": ["wordpress", "plugin", "favorite", "bookmark"],
 	"homepage": "https://favoriteposts.com",
