--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 	"type": "wordpress-plugin",
 	"require": {
 		"php": ">=5.3.2",
-		"composer/installers": "v1.0.6"
+		"composer/installers": ">=1.0.6"
 	},
 	"autoload": {
 		"psr-4" : {
